# Bmad-external

./: .gitmodules  BUILDME  CMakeLists.txt  FindFFTW.cmake  FindFGSL.cmake  FindGSL.cmake  FindHDF5.cmake  FindLAPACK.cmake  FindLAPACK95.cmake  FindOPENMPI.cmake  FindPLPLOT.cmake  FindXRAYLIB.cmake  Findfftwlib.cmake  Findfgsllib.cmake  Findopenmpilib.cmake  Findplplotlib.cmake  Findxraylib.cmake  GlobalVariables.cmake  LAPACK95_CMakeLists.txt  README  README.md  myclean.csh  mycmake.csh  mymessage.txt
bmad-external-deps/OriginalFiles/: CMakeLists.txt  CMakeLists.txt.orig.all  CMakeLists.txt~  GlobalVariables.cmake  GlobalVariables.cmake.Nov.25.2024  GlobalVariables.cmake.fromMac.1  GlobalVariables.cmake.notworking  GlobalVariables.cmake.orig  GlobalVariables.cmake~  mycmake.csh.orig  mycmake.csh~  rollout.csh
bmad-external-deps/OriginalFiles/bmad-external-deps/: fgsl.tar.gz.orig.david
